--- a/enquiry.html
+++ b/enquiry.html
@@ -181,7 +181,9 @@
                     <div class="column">
                         <form action="https://formsubmit.co/see.rohit525@gmail.com" method="POST">
 
-                            <input type="hidden" name="_next">
+                         <input type="hidden" name="_next" value="https://bharat525.github.io/Ten31_/thankyou.html">
+
+
                             <label for="fname">Full Name</label>
                             <input required type="text" id="fname" name="firstname" placeholder="Your name..">
 
