--- a/enquiry.html
+++ b/enquiry.html
@@ -190,6 +190,8 @@
 
                             <label for="email">Enter your email:</label>
                             <input required type="email" placeholder="Enter your email.." id="email" name="email">
+                            <input type="text" name="_honey" style="display:none">
+
 
 
                             <label for="phone">Phone No.</label>
