--- a/thankyou.html
+++ b/thankyou.html
@@ -1,12 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank</title>
+    <style>
+        .container-thankyou {
+            padding: 40px;
+            text-align: center;
+            width: 50%;
+            margin: auto;
+            box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+            align-items: center;
+        }
+
+        img{
+            height: 200px;
+        }
+
+        h2{
+            font-size: 4rem;
+            color: #F47C48;
+            letter-spacing: 2px;
+
+        }
+
+        p{
+            font-size: 18px;
+            padding: 20px;
+            letter-spacing: 1.4px;
+               color: #C7AA81;
+        }
+
+        .btn{
+            font-size: 1.2rem;
+            text-decoration: none;
+            padding: 10px 20px;
+        
+            border-radius: 8px;
+            background-color: blue;
+            color: white;
+        }
+
+        .btn:hover{
+            background-color: #F47C48;
+        }
+
+
+        
+@media (max-width: 768px){
+
+    h2{
+        font-size: 2rem;
+    }
+
+    img{
+        height: 100px;
+    }
+    p{
+        font-size: 16px;
+    }
+
+    .btn{
+        font-size: 0.8rem;
+    }
+
+}
+
+
+    </style>
 </head>
+
 <body>
-    <h2>Thank you</h2>
+    <div class="container-thankyou">
+
+
+
+        <h2>Thank you!</h2>
+        <img src="../sentIcon.png" alt="sent icon">
+        <p>Your Enquiry is sent</p>
+
+        <a class="btn" href="./index.html">Back to Home</a>
+
+
+    </div>
 </body>
+
 </html>
