--- a/thankyou.html
+++ b/thankyou.html
@@ -5,9 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Nunito:wght@300&family=Open+Sans:wght@300&family=Poppins:wght@100&display=swap" rel="stylesheet">
     <title>Thank</title>
     <style>
         .container-thankyou {
+            font-family: 'Nunito', sans-serif;
+
+
             padding: 40px;
             text-align: center;
             width: 50%;
