--- a/thankyou.html
+++ b/thankyou.html
@@ -83,7 +83,7 @@
 
 
         <h2>Thank you!</h2>
-        <img src="../sentIcon.png" alt="sent icon">
+        <img src="./sentIcon.png" alt="sent icon">
         <p>Your Enquiry is sent</p>
 
         <a class="btn" href="./index.html">Back to Home</a>
