--- a/Galery/mainGalary.html
+++ b/Galery/mainGalary.html
@@ -67,6 +67,13 @@
     margin: 0;
   }
 
+  
+
+
+  .foot-icon .pdf{
+    justify-content: center;
+  }
+
      @media(max-width: 320px){ 
 
 
@@ -222,7 +229,7 @@
     top: 0;
   }
 
-  img {
+  .column img {
     object-fit: contain;
     margin-bottom: -4px;
     width: 100%;
@@ -249,12 +256,12 @@
 
 
   
-      .icons{
+      /* .icons{
         display:flex !important;
         justify-content: start;
 
 
-      }
+      } */
 
   .demo {
     opacity: 0.6;
@@ -297,12 +304,18 @@
       margin: 0px !important;
     }
 
+    .foot-icon .pdf{
+          justify-content: start;
+        }
+
+
+/* 
       .icons{
         display:flex !important;
         justify-content: start;
 
 
-      }
+      } */
 
 
   }
@@ -590,7 +603,7 @@
 
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58960.52746282621!2d85.76951257910156!3d22.540437800000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1e27b9407ca567%3A0xfd76d42643a69ea4!2sM%2Fs.%20Ten%2031%20Co.!5e0!3m2!1sen!2sin!4v1640759585726!5m2!1sen!2sin"
-          width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          width="400" height="300" style="border:0; z-index: 2;;" allowfullscreen="" loading="lazy"></iframe>
       </div>
 
     <ul class="address">
