--- a/Galery/vdio.html
+++ b/Galery/vdio.html
@@ -65,14 +65,16 @@
     margin: 0;
   }
 
+.foot-icon .pdf{
+  justify-content: center;
+}
 
-
-        .icons{
+        /* .icons{
         display:flex !important;
         justify-content: start;
 
 
-      }
+      } */
 
   * {
     box-sizing: border-box;
@@ -80,6 +82,10 @@
 
 
        @media(max-width: 320px){ 
+
+        .foot-icon .pdf{
+          justify-content: start;
+        }
 
 
   .row{
@@ -266,6 +272,11 @@
   }
 
   @media only screen and (max-width: 768px) {
+
+
+    .foot-icon .pdf{
+          justify-content: start;
+        }
     .row {
       display: flex !important;
       flex-direction: column !important;
@@ -446,24 +457,24 @@
     <div class="modal-content">
       <div class="mySlides">
         <div class="numbertext">1 / 4</div>
-        <video controls src="vdios/1.mp4" style="width: 100%;"></video>
+        <video controls src="../../vdios/1.mp4" style="width: 100%;"></video>
 
 
       </div>
 
       <div class="mySlides">
         <div class="numbertext">2 / 4</div>
-        <video controls src="vdios/2.mp4" style="width: 100%;"></video>
+        <video controls src="../vdios/2.mp4" style="width: 100%;"></video>
       </div>
 
       <div class="mySlides">
         <div class="numbertext">3 / 4</div>
-        <video controls src="vdios/3.mp4" style="width: 100%;"></video>
+        <video controls src="../vdios/3.mp4" style="width: 100%;"></video>
       </div>
 
       <div class="mySlides">
         <div class="numbertext">4 / 4</div>
-        <video controls src="vdios/4.mp4" style="width: 100%;"></video>
+        <video controls src="../vdios/4.mp4" style="width: 100%;"></video>
       </div>
 
 
