--- a/about.html
+++ b/about.html
@@ -291,9 +291,8 @@
         <div class="foot-container">
             <div class="map">
 
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58960.52746282621!2d85.76951257910156!3d22.540437800000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1e27b9407ca567%3A0xfd76d42643a69ea4!2sM%2Fs.%20Ten%2031%20Co.!5e0!3m2!1sen!2sin!4v1640759585726!5m2!1sen!2sin"
-                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.0316775147935!2d85.80234605021369!3d22.54048608512665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a1e27b9407ca567%3A0xfd76d42643a69ea4!2sM%2Fs.%20Ten%2031%20Co.!5e0!3m2!1sen!2sin!4v1642418868337!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
 
