changes in Joint motar

--- a/enquiry.html
+++ b/enquiry.html
@@ -179,9 +179,9 @@
                 <div class="row">
 
                     <div class="column">
-                        <form action="https://formsubmit.co/see.rohit525@gmail.com" method="POST">
+                        <form action="https://formsubmit.co/chirania.mohit@ten31.in" method="POST">
 
-                         <input type="hidden" name="_next" value="https://bharat525.github.io/Ten31_/thankyou.html">
+                         <input type="hidden" name="_next" value="https://ten31.in/thankyou.html">
 
 
                             <label for="fname">Full Name</label>
