--- a/product/Joint.html
+++ b/product/Joint.html
@@ -344,7 +344,7 @@
         <h2 
             style=" color: black; margin-top: 2rem; font-size: 34px; font-weight: 700;display: flex; margin-left: 4rem; align-items: center; justify-content: center;">
             Block<span style=" color: #C7AA81;">&nbsp Joint  Motar </span></h2>
-        <video controls src="./AAC Block.mp4"></video>
+        <video controls src="./productDetails.mp4"></video>
 
 
     </div>
